# polymarket_may_01_2026

./: .dockerignore  .env.example  .gitignore  CAPITAL_PROJECTION_REPORT.md  CLOUDFLARE_403_FIX.md  DEPLOY.md  Dockerfile  INTEGRATION_PROGRESS.md  README.md  SYSTEMS_ANALYSIS_REPORT.md  approve.py  capital_projection_results.json  check_balance.py  check_current_markets.py  clob_types.py  docker-compose.yml  gamma_15m_finder.py  gamma_15m_finder.py.backup  hft_trader.py  main.py  market_parser.py  pyproject.toml  pyrightconfig.json  tasks.md  test_api_response.py  test_best_bid_ask_extraction.py  test_clob_connection.py  test_clob_types.py  test_decimal_fix.py  test_decimal_precision.py  test_decimal_rounding.py  test_find_budget.py  test_fok_exact.py  test_fok_final.py  test_fok_minimum.py  test_fok_rounding.py  test_fok_roundup.py  test_gamma_debug.py  test_market_parser.py  test_orderbook.py  (+3 more)
.github/: agents.md  copilot-instructions.md
ai/: Done.md  Project.md  Soul.md  Tasks.md
config/: strategies.yaml
daily-summary/: 2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-02-26.md  2026-02-27.md  2026-03-01.md  2026-03-02.md  2026-03-03.md
data/: convergence-v1-dryrun.db-shm  convergence-v1-dryrun.db-wal  convergence-v1-live.db  convergence-v1-live.db-shm  convergence-v1-live.db-wal  convergence-v1-test.db  convergence-v1-test.db-shm  convergence-v1-test.db-wal  convergence-v2-live.db  (+15 more)
(+428 files in other folders)
