[project]
name = "basetrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "fastapi>=0.129.0",
    "jinja2>=3.1.6",
    "py-clob-client>=0.34.5",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "uvicorn[standard]>=0.40.0",
    "web3>=7.14.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "basedpyright>=1.37.3",
    "hypothesis>=6.0.0",
    "numpy>=2.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
